# Lattice-Modelization-of-a-many-body-quantum-system

./: .gitignore  CMakeLists.txt  CMakeLists_max.txt  Doxyfile  Makefile  README.md  gitignore  hamiltonian.cpp  hamiltonian.h  lattice.cpp  lattice.h  lists.cpp  lists.h  main.cpp  main_max.cpp  operator.cpp  operator.h  plot.py  poc.cpp  polynom.cpp  polynom.h  set_hamiltonian.cpp
.cache/clangd/index/: AssignmentFunctors.h.A6188BA410A01386.idx  BDCSVD.h.F6481E4034E5D923.idx  ColPivHouseholderQR.h.2F564A01A858EB9A.idx  ComplexEigenSolver.h.304D1B96B60F46DD.idx  CompressedStorage.h.0D79E7090FDAC74D.idx  IndexedViewMethods.h.A1154E230ACF3055.idx  JacobiSVD.h.6CDC3F7A637457D5.idx  LDLT.h.517B47ECD86B0149.idx  Memory.h.D3795AC4AD36F0DE.idx  Meta.h.259A39F41A95E81F.idx  PermutationMatrix.h.0A62A453BBC97329.idx  SparseMap.h.2A4ED2CBED9251DA.idx  SparseMatrix.h.5F50AFEACE5F8FCF.idx  SparseSelfAdjointView.h.B85EFA6620D27B13.idx  SparseVector.h.805855213C62AE4E.idx  SparseView.h.96F29C4B1B331B48.idx  SymbolicIndex.h.65C44756A9A5CE3C.idx  arch.h.70555816854986EC.idx  arcomp.h.D4C0DC45C27ED3A6.idx  arerror.h.71B905D22FACC4EF.idx  arhbmat.h.D5A9E5D295499184.idx  arlcomp.h.BB450884A5E5CB03.idx  arlnames.h.9DC629189541F5A9.idx  arlsmat.h.76A12ECD2E7F72AB.idx  arlspdef.h.1705053881F9F91A.idx  arlspen.h.5FBB58410ADF95DC.idx  arlssym.h.472BFB8B34BCFF02.idx  arlsupm.h.94E418316E905A89.idx  arlutil.h.B65D521F00DB4C4E.idx  armat.h.B4091C0D47A51FE2.idx  arpackf.h.E0369E30C4E8C167.idx  arrseig.h.EBE81FE150F7AE4F.idx  arrssym.h.5DAF1140ED1A2152.idx  arseig.h.231363656EAFB01B.idx  arssym.h.4A30E0B8DE176F8C.idx  blas1c.h.8097335C11BD9036.idx  blas1f.h.21EC29650069412A.idx  debug.h.93A3AA2A1C11C4FB.idx  hamiltonian.cpp.D307B12EA299D544.idx  hamiltonian.h.60EBF37693A7F35A.idx  (+12 more)
include/: hamiltonian.h  lattice.h  lattice_bh.h  lattice_xy.h  neighbours.h  operator.h  randomvector.h
src/: diag.cpp  diag.py  hamiltonian.cpp  lanczos.cpp  lanczos.h  lattice.cpp  lattice.h  lattice_bh.cpp  lattice_bh.h  lattice_xy.cpp  lattice_xy.h  main.cpp  neighbours.cpp  operator.cpp  poc.cpp  randomvector.cpp
